Get tags from file names with spaces before the extension

BUG: 438562